k8s-plain/all.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos-ui
spec:
  selector:
    matchLabels:
      app: pos-ui
  replicas: 3
  template:
    metadata:
      labels:
        app: pos-ui
    spec:
      containers:
      - name: ui
        image: harbor.services.edge.wrightcode.io/apps/tanzu-edge-pos-ui-default@sha256:bbfe6d4d3ebd638388866ece76878d12147325bfb428f074464e793a22c0447f
        ports:
        - containerPort: 8080
          name: server
        - containerPort: 8081
          name: management
      imagePullSecrets:
      - name: harbor-regcred
---
apiVersion: v1
kind: Service
metadata:
  name: pos-ui-service
spec:
  ports:
  - port: 8090
    targetPort: 8080
    name: http
  - port: 8091
    targetPort: 8081
    name: management
  selector:
    app: pos-ui
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pos-ui-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      mode: PASSTHROUGH
    hosts:
    - pos-ui.services.edge.wrightcode.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pos-ui-service
spec:
  hosts:
  - pos-ui.services.edge.wrightcode.io
  gateways:
  - pos-ui-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: pos-ui-service
        port:
          number: 8090
